--- a/templates/raspibrew.html
+++ b/templates/raspibrew.html
@@ -1,4 +1,4 @@
-$def with (mode, set_point, duty_cycle, cycle_time, k_param, i_param, d_param)
+$def with (mode, set_point, duty_cycle, cycle_time, k_param, i_param, d_param, id)
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
@@ -143,7 +143,7 @@ $def with (mode, set_point, duty_cycle, cycle_time, k_param, i_param, d_param)
 		       
 		        jQuery.ajax({
 		            type: "GET",
-		            url: "/getstatus",
+		            url: "/getstatus?id=$id",
 		            dataType: "json",
 		            async: true, 
 		            cache: false,
@@ -500,6 +500,18 @@ $def with (mode, set_point, duty_cycle, cycle_time, k_param, i_param, d_param)
 	    					<input type="text" name="d"  maxlength = "6" size ="6" value=$d_param style="text-align: right;"/> 
 	    				</td>
 	    				<td>secs</td>
+	    			</tr>
+					<tr>
+	    				<td align=right>Id: </td>
+	    				<td>
+	    					<input type="text" name="Id"  maxlength = "4" size ="4" value=$id style="text-align: right;"/>   
+	    			   </td>
+	    			   <td style="width:50px"></td>
+	    			   <td align=right></td> 
+	    		        <td>
+	    					
+	    				</td>
+	    				<td></td>
 	    			</tr>
 	    		</table>
 	    		<br>
