--- a/templates/raspibrew.html
+++ b/templates/raspibrew.html
@@ -504,7 +504,7 @@ $def with (mode, set_point, duty_cycle, cycle_time, k_param, i_param, d_param, i
 					<tr>
 	    				<td align=right>Id: </td>
 	    				<td>
-	    					<input type="text" name="Id"  maxlength = "4" size ="4" value=$id style="text-align: right;"/>   
+	    					<input type="text" name="id"  maxlength = "4" size ="4" value=$id style="text-align: right;"/>   
 	    			   </td>
 	    			   <td style="width:50px"></td>
 	    			   <td align=right></td> 
