Added lcd simulation

--- a/templates/lcd.html
+++ b/templates/lcd.html
@@ -1,11 +1,11 @@
-$def with ()
+$def with (dispstr)
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html><head><title>font-family</title></head>
 <body>
 
 <p>
-<span style="font-family:monospace">01234567890123456789</span><br>
+<span style="font-family:monospace">$dispstr/span><br>
 <span style="font-family:monospace">01234567890123456789</span><br>
 </p>
 
